name:                happstack-websockets
version:             0.1.0.2
synopsis:            websockets support for happstack-server
description:         webockets allows clients to keep an open connection to the server for bidirectional communication
homepage:            https://github.com/Happstack/happstack-websockets
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.4, GHC==8.10.7, GHC==9.0.2, GHC==9.2.2, GHC==9.4.8, GHC==9.6.3, GHC==9.8.2, GHC==9.10.1

source-repository head
    type:     git
    location: https://github.com/Happstack/happstack-websockets.git

library
  exposed-modules:     Happstack.Server.WebSockets
  build-depends:       base >=4.8 && <4.21,
                       bytestring >=0.10 && <0.13,
                       case-insensitive < 1.3,
                       containers < 0.8,
                       happstack-server < 7.10,
                       mtl < 2.4,
                       websockets >= 0.12 && < 0.14
  default-language:    Haskell2010
