name:                happstack-websockets-example-client
version:             0.1.0.0
synopsis:            An example of using ghcjs-websockets with happstack-websockets
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable happstack-websockets-example-client
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       ghcjs-base
  default-language:    Haskell2010